<resources>
    <string name="app_name">Knowledge Test Practice</string>
    <string name="action_settings">Settings</string>
    <string name="action_end_practice">End Practice</string>

    <!-- Main Menu -->
    <string name="knowledge_test_btn_txt">Knowledge Test</string>
    <string name="signs_test_btn_txt">Signs Test</string>
    <string name="more_questions_btn_txt">More Questions</string>
    <string name="licencing_locations_btn_txt">Licensing Locations</string>

    <!-- Question Screens -->
    <string name="answer_btn_txt">Answer</string>

    <!-- Answer Explanation Fragment -->
    <string name="continue_btn_text">Continue</string>
    <string name="correct_text">Correct</string>
    <string name="incorrect_text">Incorrect</string>

    <!-- Result Fragment -->
    <string name="completion_txt">You\'ve completed the practice questions!</string>
    <string name="score_txt">Your Score is:</string>
    <string name="percentage_txt">XXX %</string>
    <string name="retry_btn_txt">Re-Try</string>
    <string name="continue_btn_txt">Continue</string>

    <!-- Fragment Tags -->
    <string name="main_menu_fragment_tag">MainMenuFragment</string>
    <string name="standard_question_fragment_tag">StandardQuestionFragment</string>
    <string name="answer_explanation_fragment_tag">AnswerExplanationFragment</string>
    <string name="result_fragment_tag">ResultFragment</string>

    <!-- Placeholder Text -->
    <string name="placeholder_question_txt">Some question</string>
    <string name="placeholder_answer_1">Answer 1</string>
    <string name="placeholder_answer_2">Answer 2</string>
    <string name="placeholder_answer_3">Answer 3</string>
    <string name="placeholder_answer_4">Answer 4</string>
    <string name="placeholder_result_txt">Correct/Incorrect</string>
    <string name="placeholder_explanation_txt">Some explanation goes here</string>

    <!-- Confirmation Dialog -->
    <string name="cancel_confirm_title">Stop Practice?</string>
    <string name="cancel_confirm_body">Are you sure you want to stop practice test?</string>
    <string name="positive_btn_txt">Yes</string>
    <string name="negative_btn_txt">No</string>

</resources>
