<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luismoscoso.knowledgetestpractice.ResultFragment"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"
            android:text="@string/completion_txt"
            android:id="@+id/result_tv1"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/score_txt"
            android:id="@+id/result_tv2"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/percentage_txt"
            android:textSize="50sp"
            android:id="@+id/result_percentage_tv"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:gravity="center" >

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/retry_btn_txt"
                android:id="@+id/retry_btn" />

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/continue_btn_txt"
                android:id="@+id/continue_btn" />

        </LinearLayout>

</LinearLayout>
